--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,11 @@
             android:normalScreens="false"
             android:requiresSmallestWidthDp="600"
             android:smallScreens="false"
-            android:xlargeScreens="true"
-            />
+            android:xlargeScreens="true" />
 
         <activity
             android:name=".SplashActivity"
-            android:screenOrientation="portrait"
-            >
-
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,13 +29,17 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".HomeActivity"
-            />
+        <activity
+            android:name=".HomeActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".DashboardActivity"
+            android:screenOrientation="landscape" />
+
 
     </application>
 
