design is proper work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
         <activity android:name=".DashboardActivity"
             android:screenOrientation="landscape" />
 
+        <activity android:name=".LeadActivity"
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".UpdateLeadActivity"
+            android:screenOrientation="portrait" />
+
 
     </application>
 
