Notification Doen by - Aniket Adsul

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,12 @@
             android:screenOrientation="portrait" />
 
         <activity android:name=".UpdateLeadActivity"
-            android:screenOrientation="portrait" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+            android:screenOrientation="portrait" />
+
+        <activity android:name=".NotificationActivity"
+            android:screenOrientation="portrait" />
+
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
