--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <activity android:name=".NotificationActivity"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".StatusReportActivity"
+            android:screenOrientation="landscape" />
+
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
