--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
 
         <activity android:name=".StatusReportActivity"
             android:screenOrientation="landscape" />
+        <receiver android:name=".MyScheduledReceiver" />
 
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
